# OCR-project

./: CMakeLists.txt  README.md  conv_bias.txt  conv_k0.txt  conv_k1.txt  conv_k2.txt  conv_k3.txt  conv_k4.txt  conv_k5.txt  conv_k6.txt  conv_k7.txt  conv_kernel.txt  dense_bias.txt  dense_weights.txt  main.cpp  matrix.cpp  matrix.h  train.py
